# stoat-freya

./: Cargo.toml  README.md  build.rs  dist-workspace.toml
.cargo/: config.toml
src/: color.rs  config.rs  error.rs  http.rs  main.rs  material.rs  permissions.rs  state.rs  theme.rs  types.rs  utils.rs  websocket.rs
src/components/: app.rs  appearance_settings.rs  avatar.rs  button.rs  category.rs  channel.rs  channel_button.rs  channel_list.rs  channel_messages copy.rs  channel_messages.rs  channel_settings.rs  client.rs  create_join_server_modal.rs  create_role_modal.rs  create_server_modal.rs  current_user_button.rs  delete_message_modal.rs  discover.rs  dm_button.rs  dm_list.rs  emoji_picker.rs  entry.rs  floating.rs  friend_button.rs  friends.rs  friends_list.rs  hide_sidebar_header.rs  home.rs  home_button.rs  http.rs  image.rs  join_server_modal.rs  login.rs  markdown.rs  member_list.rs  message.rs  message_actions.rs  message_attachment.rs  message_attachments_preview.rs  message_content.rs  (+28 more)
src/components/channel/: channel.rs  channel_messages.rs  member_list.rs  mod.rs
src/components/channel/messaging/: mod.rs
src/components/channel/messaging/message/: message.rs  message_actions.rs  message_attachment.rs  message_content.rs  message_edit.rs  message_embed.rs  mod.rs
src/components/channel/messaging/textbox/: message_attachments_preview.rs  mod.rs  textbox.rs
src/components/channel/voice/: mod.rs  room_controls.rs  room_manager.rs
src/components/common/: avatar.rs  button.rs  deferred.rs  dropdown.rs  entry.rs  mod.rs  segmented_button.rs
src/components/home/: mod.rs  welcome.rs
src/components/home/dms/: dm_button.rs  dm_list.rs  mod.rs
src/components/home/friends/: friends_list.rs  mod.rs
src/components/login/: login.rs  mod.rs
src/components/managers/: floating_manager.rs  http_manager.rs  material_theme_manager.rs  mod.rs
src/components/modals/: channel_description_modal.rs  join_server_modal.rs  mod.rs  modal.rs  server_info_modal.rs
src/components/server/: category.rs  channel_button.rs  channel_list.rs  mod.rs  server.rs
src/components/settings/: mod.rs
src/components/settings/channel/: channel_settings.rs  mod.rs  overview_channel_settings.rs
src/components/settings/server/: emoji_server_settings.rs  mod.rs  overview_server_settings.rs  role_server_settings.rs
src/components/settings/settings/: account_settings.rs  appearance_settings.rs  mod.rs  settings.rs
src/components/sidebar/: current_user_button.rs  home_button.rs  mod.rs
src/components/sidebar/servers/: mod.rs  server_list.rs  server_list_button.rs
src/stoat/: http.rs  mod.rs  permissions.rs  types.rs  websocket.rs
src/theme/: color.rs  material.rs  mod.rs  theme.rs
