[package]
name = "stoat-freya"
version = "0.1.0"
edition = "2024"

[features]
hotreload = ["freya/hotreload"]

[patch.crates-io]
# freya = { path = "../freya/crates/freya" }
# freya-components = { path = "../freya/crates/freya-components" }

[dependencies]
freya = { version = "0.4.0-rc.19", features = ["devtools", "radio", "remote-asset", "icons", "webview", "markdown"] }
freya-components = { version = "0.4.0-rc.19", features = ["remote-asset", "gif"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = { version = "0.27", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.52.1", features = ["rt"] }
bytes = "1.11.0"
scc = "3.4.8"
indexmap = "*"
rfd = { version = "0.17.2", features = [] }
ulid = "1.2.1"
rand = "0.10.1"
infer = "0.19.0"
etcetera = "*"
euclid = "0.22.14"
jiff = "*"
blocking = "*"
ureq = "3.1.4"

stoat-models = { package = "revolt-models", version = "0.9.4", default-features = false, features = ["serde", "partials"] }
stoat-database = { package = "revolt-database", version = "0.9.4", default-features = false, features = ["async-std-runtime"] }
stoat-permissions = { package = "revolt-permissions", version = "0.9.4" }
stoat-result = { package = "revolt-result", default-features = false, features = ["serde"], version = "0.9.4" }
